--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "0xEX75 hacks stuff"
+title: "PS C:\Users\0xEX75\> _"
 author: "0xEX75"
 url: "https://0xEX75.me"
 description: "CTF penetration, programmation, analyse de malware, développement des outils et bien d'autre chose."
